削除済みだがkeyなどの値が残っていたので修正

--- a/example_of_azure_pronunciation_assessment.ipynb
+++ b/example_of_azure_pronunciation_assessment.ipynb
@@ -76,10 +76,7 @@
         "# 今回はセキュリテイを無視していますが、本番環境では重要情報なのでご注意を\n",
         "\n",
         "COG_SERVICE_KEY=\"your_cognitive_services_key\"\n",
-        "COG_SERVICE_REGION=\"your_cognitive_services_location\"\n",
-        "\n",
-        "COG_SERVICE_KEY=\"6ce9c4db5c0945dcbe830fd423301367\"\n",
-        "COG_SERVICE_REGION=\"southcentralus\"\n"
+        "COG_SERVICE_REGION=\"your_cognitive_services_location\"\n"
       ]
     },
     {
