プログラム内容を変更。Scriptを変更しました。

--- a/example_of_azure_pronunciation_assessment.ipynb
+++ b/example_of_azure_pronunciation_assessment.ipynb
@@ -19,6 +19,21 @@
     {
       "cell_type": "markdown",
       "source": [
+        "## 本プログラムについて\n",
+        "\n",
+        "概要：Qiita記事「英語の発音練習に活用：Azure Pronunciation assessmentの使用方法を解説」\n",
+        "\n",
+        "https://qiita.com/sugulu_Ogawa_ISID/items/1d96546b74a739b3d44f\n",
+        "\n",
+        "の実装プログラムです。\n"
+      ],
+      "metadata": {
+        "id": "KiULuBoHBMKA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "---\n",
         "\n",
         "[1] まずは音声認識からはじめてみましょう\n",
@@ -39,7 +54,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LuFZEHMBz7e6",
-        "outputId": "26821a36-ab54-468a-c136-8c194e68be74"
+        "outputId": "15c0865f-7106-4bd8-b2fb-0c53d9bbfdd3"
       },
       "execution_count": 1,
       "outputs": [
@@ -56,6 +71,7 @@
       "cell_type": "code",
       "source": [
         "# [2] 使用するパッケージなどのimport\n",
+        "import json\n",
         "import azure.cognitiveservices.speech as speech_sdk\n"
       ],
       "metadata": {
@@ -92,7 +108,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "X-Rwd4IJ0ASL",
-        "outputId": "e7b9115f-cf5c-4ec4-8525-b71b3d0091b1"
+        "outputId": "3f3f4b74-1bd2-451b-af69-6ae4c207eb90"
       },
       "execution_count": 4,
       "outputs": [
@@ -153,7 +169,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JidWlIXz19Vn",
-        "outputId": "81199155-92fe-41f6-8106-8bf439e94614"
+        "outputId": "0c9a209c-aceb-4110-9deb-13e1eb50313b"
       },
       "execution_count": 8,
       "outputs": [
@@ -182,7 +198,7 @@
       "cell_type": "code",
       "source": [
         "# [1] 発音している単語のスクリプトを用意します\n",
-        "script = 'What time is it'\n"
+        "script = 'What time is it now in Japan ?'\n"
       ],
       "metadata": {
         "id": "KszQ23302Qsu"
@@ -195,15 +211,18 @@
       "source": [
         "[2] AudioConfigの設定\n",
         "\n",
-        "参考記事\n",
+        "・参考記事\n",
         "\n",
         "https://docs.microsoft.com/ja-jp/azure/cognitive-services/speech-service/how-to-pronunciation-assessment?pivots=programming-language-python\n",
         "\n",
-        "SDK解説：azure-cognitiveservices-speech Package\n",
+        "・SDK解説：azure-cognitiveservices-speech Package\n",
         "\n",
         "https://docs.microsoft.com/ja-jp/python/api/azure-cognitiveservices-speech/?view=azure-python\n",
         "\n",
-        "プログラム参考\n",
+        "https://docs.microsoft.com/ja-jp/python/api/azure-cognitiveservices-speech/azure.cognitiveservices.speech.pronunciationassessmentconfig?view=azure-python\n",
+        "\n",
+        "\n",
+        "・プログラム参考\n",
         "\n",
         "https://github.com/Azure-Samples/cognitive-services-speech-sdk/blob/4f9ee79c2287a5a00dcd1a50112cd43694aa7286/samples/python/console/speech_sample.py#L707\n"
       ],
@@ -215,12 +234,9 @@
       "cell_type": "code",
       "source": [
         "# [2] AudioConfigの設定\n",
-        "# 詳細\n",
-        "# https://docs.microsoft.com/ja-jp/python/api/azure-cognitiveservices-speech/azure.cognitiveservices.speech.pronunciationassessmentconfig?view=azure-python\n",
-        "\n",
         "pronunciation_config = speech_sdk.PronunciationAssessmentConfig(reference_text=script,\n",
-        "                                                                   grading_system=speech_sdk.PronunciationAssessmentGradingSystem.HundredMark,\n",
-        "                                                                   granularity=speech_sdk.PronunciationAssessmentGranularity.Word)\n"
+        "                                                                  grading_system=speech_sdk.PronunciationAssessmentGradingSystem.HundredMark,\n",
+        "                                                                  granularity=speech_sdk.PronunciationAssessmentGranularity.Word)\n"
       ],
       "metadata": {
         "id": "zCg1FULWCnHp"
@@ -280,7 +296,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9TtBKLs0GTdL",
-        "outputId": "728851cb-d7c3-4f43-9748-4df27652c5a8"
+        "outputId": "8bc5ddad-9eda-4070-fcf7-692c8fa87a15"
       },
       "execution_count": 14,
       "outputs": [
@@ -288,7 +304,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy score: 100.0, fluency score: 100.0, completeness score : 100.0, pronunciation score: 100.0\n"
+            "Accuracy score: 69.0, fluency score: 53.0, completeness score : 86.0, pronunciation score: 62.8\n"
           ]
         }
       ]
@@ -305,7 +321,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ghqJZy6BKJwX",
-        "outputId": "dfc3fc89-4340-4295-8e0c-2d2aaa29ae44"
+        "outputId": "3cace42a-2874-4f7d-946c-ede286319d2d"
       },
       "execution_count": 15,
       "outputs": [
@@ -316,7 +332,10 @@
             "単語：What, Accuracy score：100.0\n",
             "単語：time, Accuracy score：100.0\n",
             "単語：is, Accuracy score：100.0\n",
-            "単語：it, Accuracy score：100.0\n"
+            "単語：it, Accuracy score：100.0\n",
+            "単語：now, Accuracy score：40.0\n",
+            "単語：in, Accuracy score：40.0\n",
+            "単語：Japan, Accuracy score：0.0\n"
           ]
         }
       ]
@@ -325,8 +344,6 @@
       "cell_type": "code",
       "source": [
         "# [8] まとめてJsonで取得・表示\n",
-        "import json\n",
-        "\n",
         "json_result = result.properties.get(speech_sdk.PropertyId.SpeechServiceResponse_JsonResult)\n",
         "jo = json.loads(json_result)\n",
         "print(json.dumps(jo, indent=2))"
@@ -336,33 +353,33 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "h6MgMRoxMrkU",
-        "outputId": "eafa33a5-2ab1-4030-eaf7-c9d030c71348"
+        "outputId": "8af67849-7eea-499d-a1e3-17b390ec28ef"
       },
-      "execution_count": 17,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "{\n",
-            "  \"Id\": \"b4cac8d5693a4cd9a08126fae9c90c28\",\n",
+            "  \"Id\": \"b19370d415794e5bb53919f179ffa1df\",\n",
             "  \"RecognitionStatus\": \"Success\",\n",
             "  \"Offset\": 5000000,\n",
-            "  \"Duration\": 11100000,\n",
-            "  \"DisplayText\": \"What time is it?\",\n",
+            "  \"Duration\": 23500000,\n",
+            "  \"DisplayText\": \"What time is it now in Japan?\",\n",
             "  \"SNR\": 27.69381,\n",
             "  \"NBest\": [\n",
             "    {\n",
-            "      \"Confidence\": 0.9356122,\n",
-            "      \"Lexical\": \"What time is it\",\n",
-            "      \"ITN\": \"What time is it\",\n",
-            "      \"MaskedITN\": \"what time is it\",\n",
-            "      \"Display\": \"What time is it?\",\n",
+            "      \"Confidence\": 0.9015003,\n",
+            "      \"Lexical\": \"What time is it now in Japan\",\n",
+            "      \"ITN\": \"What time is it now in Japan\",\n",
+            "      \"MaskedITN\": \"what time is it now in japan\",\n",
+            "      \"Display\": \"What time is it now in Japan?\",\n",
             "      \"PronunciationAssessment\": {\n",
-            "        \"AccuracyScore\": 100.0,\n",
-            "        \"FluencyScore\": 100.0,\n",
-            "        \"CompletenessScore\": 100.0,\n",
-            "        \"PronScore\": 100.0\n",
+            "        \"AccuracyScore\": 69.0,\n",
+            "        \"FluencyScore\": 53.0,\n",
+            "        \"CompletenessScore\": 86.0,\n",
+            "        \"PronScore\": 62.8\n",
             "      },\n",
             "      \"Words\": [\n",
             "        {\n",
@@ -400,6 +417,33 @@
             "            \"AccuracyScore\": 100.0,\n",
             "            \"ErrorType\": \"None\"\n",
             "          }\n",
+            "        },\n",
+            "        {\n",
+            "          \"Word\": \"now\",\n",
+            "          \"Offset\": 25900000,\n",
+            "          \"Duration\": 500000,\n",
+            "          \"PronunciationAssessment\": {\n",
+            "            \"AccuracyScore\": 40.0,\n",
+            "            \"ErrorType\": \"None\"\n",
+            "          }\n",
+            "        },\n",
+            "        {\n",
+            "          \"Word\": \"in\",\n",
+            "          \"Offset\": 26500000,\n",
+            "          \"Duration\": 500000,\n",
+            "          \"PronunciationAssessment\": {\n",
+            "            \"AccuracyScore\": 40.0,\n",
+            "            \"ErrorType\": \"None\"\n",
+            "          }\n",
+            "        },\n",
+            "        {\n",
+            "          \"Word\": \"Japan\",\n",
+            "          \"Offset\": 27100000,\n",
+            "          \"Duration\": 1400000,\n",
+            "          \"PronunciationAssessment\": {\n",
+            "            \"AccuracyScore\": 0.0,\n",
+            "            \"ErrorType\": \"Mispronunciation\"\n",
+            "          }\n",
             "        }\n",
             "      ]\n",
             "    }\n",
@@ -417,17 +461,6 @@
       "metadata": {
         "id": "slMkki-9Hotw"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "moWEmZkjGUwH"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
